#141 Admin Tool - Wrapping issues in iphone.

--- a/web-app/css/cgrails/default/less/admin.less
+++ b/web-app/css/cgrails/default/less/admin.less
@@ -18,6 +18,9 @@
 	img.userImage {
 		width: 25px;
 	}
+	.wordWrap {
+		word-break: break-all;
+	}
 }
 
 i {
